--- a/src/4.x/drivers/net/Makefile
+++ b/src/4.x/drivers/net/Makefile
@@ -12,16 +12,16 @@
 #obj-$(CONFIG_IFB) += ifb.o
 #obj-$(CONFIG_MACVLAN) += macvlan.o
 #obj-$(CONFIG_MACVTAP) += macvtap.o
-obj-$(CONFIG_MII) += mii.o
-obj-$(CONFIG_MDIO) += mdio.o
+obj-y += mii.o
+obj-y += mdio.o
 #obj-$(CONFIG_NET) += Space.o loopback.o
 #obj-$(CONFIG_NETCONSOLE) += netconsole.o
-obj-$(CONFIG_PHYLIB) += phy/
+obj-y += phy/
 #obj-$(CONFIG_RIONET) += rionet.o
 #obj-$(CONFIG_NET_TEAM) += team/
 #obj-$(CONFIG_TUN) += tun.o
 #obj-$(CONFIG_VETH) += veth.o
-obj-$(CONFIG_VIRTIO_NET) += virtio_net.o
+obj-y += virtio_net.o
 #obj-$(CONFIG_VXLAN) += vxlan.o
 #obj-$(CONFIG_GENEVE) += geneve.o
 #obj-$(CONFIG_NLMON) += nlmon.o
@@ -36,7 +36,7 @@ obj-$(CONFIG_VIRTIO_NET) += virtio_net.o
 #obj-$(CONFIG_CAN) += can/
 #obj-$(CONFIG_ETRAX_ETHERNET) += cris/
 #obj-$(CONFIG_NET_DSA) += dsa/
-obj-$(CONFIG_ETHERNET) += ethernet/
+obj-y += ethernet/
 #obj-$(CONFIG_FDDI) += fddi/
 #obj-$(CONFIG_HIPPI) += hippi/
 #obj-$(CONFIG_HAMRADIO) += hamradio/
@@ -60,11 +60,11 @@ obj-$(CONFIG_ETHERNET) += ethernet/
 #obj-$(CONFIG_WIMAX) += wimax/
 #obj-$(CONFIG_IEEE802154) += ieee802154/
 
-obj-$(CONFIG_VMXNET3) += vmxnet3/
+obj-y += vmxnet3/
 #obj-$(CONFIG_XEN_NETDEV_FRONTEND) += xen-netfront.o
 #obj-$(CONFIG_XEN_NETDEV_BACKEND) += xen-netback/
 
-obj-$(CONFIG_USB_NET_DRIVERS) += usb/
+obj-y += usb/
 
 #obj-$(CONFIG_HYPERV_NET) += hyperv/
 #obj-$(CONFIG_NTB_NETDEV) += ntb_netdev.o
